# codeblocks

./: .env.example  .gitignore  README.md  pyproject.toml
llm_factory/: .gitignore  .template.example.json  README.md  requirements.txt
llm_factory/src/: llm_factory.py
llm_factory/src/patcher/: base.py  buffered_streaming.py  langfuse_callback_injector.py  langfuse_wrapper.py
llm_factory/tests/: test_llm_factory.py
package_importer/src/: importer.py
pydantic_util/src/: make_partial.py
pydantic_util/tests/: test_make_partial.py
request_handler/src/: mock_server.py
request_handler/src/http_handler/: handler.py
request_handler/tests/: conftest.py
request_handler/tests/http/: test_handler.py
singleton/examples/: fastapi_lifespan_pattern.py
singleton/src/: singleton.py  singleton_with_lock.py
singleton/tests/: test_singleton.py  test_singleton_with_lock.py
wrapper/exception/: exception_handler.py
wrapper/execution/: base.py
wrapper/src/exception/: exception_tracer.py
wrapper/src/execution/: base.py  execution_decorator.py
wrapper/tests/exception/: test_exception_handler.py  test_exception_tracer.py
wrapper/tests/execution/: test_base.py  test_execution_decorator.py
